0.23.3: Minor CSS changes for menu to prevent wrapping with language changes

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -1,7 +1,7 @@
 // Width Settings
 @width: {
     menuSysBtn:     190px;
-    menuLangBtn:    70px;
+    menuLangBtn:    80px;
     listenersForm:  560px;
     signalsForm:    560px;
     logonForm:      300px;
@@ -224,7 +224,7 @@ body {
         .language {
             background: @white;
             a {
-                padding: 0.25em 0.5em;
+                padding: 0.25em 1em;
                 font-size: 80%;
                 text-align: center;
                 &:hover {
